# netmedic-linux

./: README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  SESSION_RESUME.md  TODO.md  build_binary.sh  generate_final_icon.py  netmedic.desktop  netmedic.spec  netmedic_mcp.py  netmedic_run  pyi_gi_runtime_hook.py
docs/: MANUAL.md
netmedic/: install.sh  pyproject.toml
netmedic/netmedic/: app.py  config.py  models.py  network.py  system.py  theme.py  ui.py  ui_vpn.py
netmedic/netmedic.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
netmedic/netmedic/operators/vpn/: angristan.py  base.py
tests/: test_network.py  test_security.py  test_signal_cleanup.py  test_system.py
