[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "netmedic"
version = "1.0.0rc1"
authors = [
    { name = "Gemini", email = "gemini@google.com" },
]
description = "A simple network diagnostic and repair tool for Linux."
requires-python = ">=3.8"
dependencies = [
    "PyGObject",
    "pillow",
]

[project.scripts]
netmedic = "netmedic.app:main"
